# pesdrone

./: .gitignore  README.md  multi_patch_demo.geojson
arduino-pump/: README.md
arduino-pump/src/: main.ino
docs/: ardupilot-fixed-wing-integration-runbook.md  fixed-wing-operations-story-and-parameter-guide.md  image-trial-ppt-guide.md  key-findings-report.md  mission-fsm.md  multi-patch-demo-playbook.md  multi-patch-demo-ppt-draft.md  multi-patch-demo-technical-report.md  safety-inhibit-matrix.md  system-architecture.md  test-gates.md
docs/protocols/: mavlink-contract.md  pi-arduino-serial.md
ground-station-offline/backend/: README.md  app.py  requirements.txt
ground-station-offline/frontend/: index.html  package.json  tsconfig.json
ground-station-offline/frontend/src/: main.ts
pi-companion/: README.md  pyproject.toml
pi-companion/src/pi_companion/: __init__.py  image_patch_trial.py  main.py  mission_orchestrator.py  models.py  multi_patch_demo.py  safety_supervisor.py
pi-companion/src/pi_companion/io/: __init__.py  arduino_client.py  mavlink_client.py
pi-companion/src/pi_companion/perception/: __init__.py  capture_pipeline.py  detector_classical.py  geotag_projection.py
pi-companion/src/pi_companion/planning/: __init__.py  multi_patch_planner.py
pi-companion/src/pi_companion/telemetry/: __init__.py  perf_monitor.py
tools-sim-test/: README.md  create_sample_trial_image.py
tools-sim-test/hil/: test_protocol_faults.py
tools-sim-test/sitl/: test_image_patch_trial.py  test_mission_safety.py  test_multi_patch_planner.py
