[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pi-companion"
version = "0.1.0"
description = "Companion computer stack for fixed-wing targeted spray prototype"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "Pillow>=10.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
pi-companion-demo = "pi_companion.main:run_demo"
pi-companion-multi-patch-demo = "pi_companion.multi_patch_demo:run_demo"
pi-companion-image-trial = "pi_companion.image_patch_trial:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
